--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,22 +16,34 @@
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:text="C"
+                android:background="#ffaa"
+                android:layout_margin="10dp"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:text="удалить"
+                android:background="#ffaa"
+                android:layout_margin="10dp"/>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:text="OFF"
+                android:background="#ffaa"
+                android:layout_margin="10dp"/>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:text="+"
+                android:background="#ffaa"/>
 
         </TableRow>
 
@@ -40,22 +52,34 @@
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:text="1"
+                android:background="#5522"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:text="2"
+                android:layout_margin="10dp"
+                android:background="#5522"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:text="3"
+                android:layout_margin="10dp"
+                android:background="#5522"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:text="-"
+                android:layout_margin="10dp"
+                android:background="#ffaa"/>
 
         </TableRow>
 
@@ -64,22 +88,34 @@
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:text="4"
+                android:layout_margin="10dp"
+                android:background="#5522" />
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:text="5"
+                android:layout_margin="10dp"
+                android:background="#5522"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="6"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#5522"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="*"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#ffaa" />
 
         </TableRow>
 
@@ -88,22 +124,34 @@
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="7"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#5522"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="8"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#5522" />
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="9"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#5522"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="/"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#ffaa" />
 
         </TableRow>
 
@@ -112,21 +160,35 @@
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
-            <Button
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="."
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#ffaa"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="0"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#5522"/>
 
             <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"/>
+                android:text="%"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#ffaa"/>
+
+            <Button
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:text="="
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="#ffaa"/>
+            
         </TableRow>
 
     </TableLayout>
