Написала обработку каждой кнопки, сделала их кликабельными

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,181 +14,301 @@
 
         <TableRow>
 
+            <TextView
+                android:id="@+id/new_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="8dp"
+                android:text="New"
+                android:textColor="#ffaa" />
+
             <Button
+                android:id="@+id/delete_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:text="C"
-                android:background="#ffaa"
+                android:text="Del"
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"
                 android:layout_margin="10dp"/>
 
             <Button
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:text="удалить"
-                android:background="#ffaa"
-                android:layout_margin="10dp"/>
-
-            <Button
+                android:id="@+id/exit_button"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="50dp"
-                android:text="OFF"
-                android:background="#ffaa"
+                android:text="Exit"
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"
                 android:layout_margin="10dp"/>
 
             <Button
+                android:id="@+id/sum_button"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:text="+"
-                android:background="#ffaa"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"/>
 
         </TableRow>
 
         <TableRow>
 
             <Button
+                android:id="@+id/one_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:text="1"
-                android:background="#5522"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/two_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="2"
                 android:layout_margin="10dp"
-                android:background="#5522"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/three_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="3"
                 android:layout_margin="10dp"
-                android:background="#5522"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/min_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="-"
                 android:layout_margin="10dp"
-                android:background="#ffaa"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"/>
 
         </TableRow>
 
         <TableRow>
 
             <Button
+                android:id="@+id/four_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="4"
                 android:layout_margin="10dp"
-                android:background="#5522" />
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522" />
 
             <Button
+                android:id="@+id/five_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="5"
                 android:layout_margin="10dp"
-                android:background="#5522"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/six_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="6"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#5522"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/mul_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:text="*"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#ffaa" />
+                android:text="*"
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"/>
 
         </TableRow>
 
         <TableRow>
 
             <Button
+                android:id="@+id/seven_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="7"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#5522"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/eight_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="8"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#5522" />
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/nine_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="9"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#5522"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/division_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="/"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#ffaa" />
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"/>
 
         </TableRow>
 
         <TableRow>
 
             <Button
+                android:id="@+id/point_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="."
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#ffaa"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"/>
 
             <Button
+                android:id="@+id/null_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="0"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#5522"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#5522"/>
 
             <Button
+                android:id="@+id/percent_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="%"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#ffaa"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"/>
 
             <Button
+                android:id="@+id/equally_button"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:text="="
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="#ffaa"/>
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="24dp"
+                android:padding="4dp"
+                android:textColor="#ffaa"/>
 
         </TableRow>
 
