--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/wooden_bridge"
     tools:context=".MainActivity">
 
+
     <TableLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
@@ -311,6 +312,13 @@
                 android:textColor="#ffaa"/>
 
         </TableRow>
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="16dp"
+            android:background="@color/cardview_dark_background"/>
 
     </TableLayout>
 
