--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
         <TableRow>
 
-            <TextView
+            <Button
                 android:id="@+id/new_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
