--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,20 @@
         android:orientation="vertical">
 
         <TableRow>
+            <TextView
+                android:id="@+id/text"
+                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:layout_margin="16dp"
+                android:textColor="@color/white"
+                android:background="@color/cardview_dark_background"/>
+        </TableRow>
+
+        <TableRow>
 
             <Button
                 android:id="@+id/new_button"
-                android:layout_width="0dp"
+                android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
@@ -27,49 +37,8 @@
                 android:textSize="24dp"
                 android:padding="8dp"
                 android:text="New"
-                android:textColor="#ffaa" />
+                android:textColor="#4306EC" />
 
-            <Button
-                android:id="@+id/delete_button"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:text="Del"
-                android:background="?android:selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:textSize="24dp"
-                android:padding="4dp"
-                android:textColor="#ffaa"
-                android:layout_margin="10dp"/>
-
-            <Button
-                android:id="@+id/exit_button"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="50dp"
-                android:text="Exit"
-                android:background="?android:selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:textSize="24dp"
-                android:padding="4dp"
-                android:textColor="#ffaa"
-                android:layout_margin="10dp"/>
-
-            <Button
-                android:id="@+id/sum_button"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:text="+"
-                android:background="?android:selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:textSize="24dp"
-                android:padding="4dp"
-                android:textColor="#ffaa"/>
 
         </TableRow>
 
@@ -87,7 +56,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
                 android:id="@+id/two_button"
@@ -101,7 +70,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
                 android:id="@+id/three_button"
@@ -115,7 +84,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
                 android:id="@+id/min_button"
@@ -129,7 +98,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#ffaa"/>
+                android:textColor="#4306EC"/>
 
         </TableRow>
 
@@ -147,7 +116,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522" />
+                android:textColor="#F40707" />
 
             <Button
                 android:id="@+id/five_button"
@@ -161,7 +130,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
                 android:id="@+id/six_button"
@@ -175,7 +144,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
                 android:id="@+id/mul_button"
@@ -189,7 +158,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#ffaa"/>
+                android:textColor="#4306EC"/>
 
         </TableRow>
 
@@ -207,7 +176,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
                 android:id="@+id/eight_button"
@@ -221,7 +190,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
                 android:id="@+id/nine_button"
@@ -235,7 +204,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
                 android:id="@+id/division_button"
@@ -249,7 +218,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#ffaa"/>
+                android:textColor="#4306EC"/>
 
         </TableRow>
 
@@ -267,7 +236,7 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#ffaa"/>
+                android:textColor="#4306EC"/>
 
             <Button
                 android:id="@+id/null_button"
@@ -281,21 +250,21 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#5522"/>
+                android:textColor="#F40707"/>
 
             <Button
-                android:id="@+id/percent_button"
-                android:layout_weight="1"
+                android:id="@+id/sum_button"
                 android:layout_width="0dp"
-                android:text="%"
+                android:layout_weight="1"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
+                android:text="+"
                 android:background="?android:selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#ffaa"/>
+                android:textColor="#4306EC"/>
 
             <Button
                 android:id="@+id/equally_button"
@@ -309,16 +278,10 @@
                 android:focusable="true"
                 android:textSize="24dp"
                 android:padding="4dp"
-                android:textColor="#ffaa"/>
+                android:textColor="#4306EC"/>
 
         </TableRow>
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="16dp"
-            android:background="@color/cardview_dark_background"/>
 
     </TableLayout>
 
