--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,13 @@
         android:orientation="vertical">
 
         <TableRow>
-            <TextView
-                android:id="@+id/text"
-                android:layout_weight="1"
-                android:layout_height="40dp"
-                android:layout_margin="16dp"
-                android:textColor="@color/white"
-                android:background="@color/cardview_dark_background"/>
+            <EditText
+                android:id="@+id/answer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="2"
+                android:maxLines="2"
+                android:textSize="20sp"/>
         </TableRow>
 
         <TableRow>
